--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -19,7 +19,8 @@
         lessonsThisWeekPickled: String,
         fullWeeklyPlanOfLessonsPickled: String,
         weekNumber: Int,
-        todaysDate: java.time.LocalDate
+        todaysDate: java.time.LocalDate,
+        completedEsAndOsBenchmarksPickled: String
 )
 
 @tabContentActiveOrNot(index: Int) = {
