--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -489,6 +489,7 @@
     localStorage.setItem("tttUserId", "@tttUserId.value");
     localStorage.setItem("lessonsThisWeekPickled", "@lessonsThisWeekPickled");
     localStorage.setItem("fullWeeklyPlanOfLessonsPickled", "@fullWeeklyPlanOfLessonsPickled");
+    localStorage.setItem("completedEsAndOsBenchmarksPickled", "@completedEsAndOsBenchmarksPickled");
     @for(group <- classDetails.groups) {
     localStorage.setItem("@group.groupId.id", "@group.groupName.name");
     }
