--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -5,6 +5,11 @@
 @import io.sudostream.timetoteach.messages.systemwide.model.classtimetable.sessions.SessionBoundaryType
 @import io.sudostream.timetoteach.messages.systemwide.model.classtimetable.sessions.SessionName
 @import models.timetoteach.term.SchoolTerm
+@import duplicate.model.planning.FullWeeklyPlanOfLessons
+@import shared.util.SubjectsToPlanAreaUtil
+@import io.sudostream.timetoteach.messages.systemwide.model.classtimetable.subjectdetail.SubjectDetailWrapper
+@import duplicate.model.planning.LessonPlan
+@import duplicate.model.planning.AttributeRowKey
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler,
         userPictureUri: Option[String],
         userFirstName: Option[String],
@@ -14,7 +19,8 @@
         classTimetable: ClassTimetable,
         currentTerm: SchoolTerm,
         weekNumber: Int,
-        todaysDate: java.time.LocalDate
+        todaysDate: java.time.LocalDate,
+        fullWeeklyPlanOfLessons : FullWeeklyPlanOfLessons
 )
 
 @splitCamel(s: String) = {
@@ -30,6 +36,48 @@
 
 @calculateColumnBootstrapWidth(numberOfLessonsInSession: Int) = {
 @{s"""col-${(12 / numberOfLessonsInSession).toString.trim}"""}
+}
+
+
+@buildListFromNewLines(elem: AttributeRowKey,lessonPlan: LessonPlan) = {
+    <div class="weekly-planning-individual-activity-wrapper">
+        <ul>
+        @for(line <- elem.attributeValue.split("\n")){
+            <li class="text-primary">@line</li>
+        }
+        </ul>
+        <div class="weekly-planning-groups-for-activity">
+            @*<span class="text-muted">Groups: </span>*@
+            @for(groupId <- lessonPlan.activitiesPerGroup(elem)){
+                <span class="weekly-planning-group-for-activity text-info">@classDetails.findGroupName(groupId)</span>
+            }
+        </div>
+    </div>
+}
+
+@buildHtmlList(elements: List[AttributeRowKey], lessonPlan: LessonPlan) = {
+    <ul>
+        @for(elem <- elements.sortBy(key => key.attributeOrderNumber)) {
+            <li>
+            @buildListFromNewLines(elem, lessonPlan)
+            </li>
+        }
+    </ul>
+}
+
+@buildActivitiesOutput(subjectName: String, subjectInstance: SubjectDetailWrapper, dayOfTheWeek: String) = {
+    <div>
+        @if(fullWeeklyPlanOfLessons.subjectToWeeklyPlanOfSubject.isDefinedAt(subjectName)) {
+            @if(fullWeeklyPlanOfLessons.subjectToWeeklyPlanOfSubject(subjectName).findLessonPlan(subjectInstance.subjectDetail.startTime.timeIso8601, dayOfTheWeek).isDefined){
+                @buildHtmlList(fullWeeklyPlanOfLessons.subjectToWeeklyPlanOfSubject(subjectName).findLessonPlan(subjectInstance.subjectDetail.startTime.timeIso8601, dayOfTheWeek).get.activitiesPerGroup.keys.toList,
+                    fullWeeklyPlanOfLessons.subjectToWeeklyPlanOfSubject(subjectName).findLessonPlan(subjectInstance.subjectDetail.startTime.timeIso8601, dayOfTheWeek).get)
+            } else {
+                <div class="text-muted">None yet</div>
+            }
+        } else {
+            <div class="text-muted">None yet</div>
+        }
+    </div>
 }
 
 @_templateWeeklyPlanning(handler, userPictureUri, userFirstName, userFamilyName, classDetails, CLASS_WEEKLY_PLANS, Some(WEEKLY_VIEW), currentTerm, weekNumber, todaysDate) {
@@ -133,21 +181,20 @@
                                                         </small>
                                                     </div>
 
-                                                    <div class="weekly-plan-subject-es-and-os">
-                                                        <div class="weekly-plan-subject-es-and-os-header text-dark">
-                                                        Es & Os
+                                                    <div class="weekly-plan-subject-activities">
+                                                        <div class="weekly-plan-subject-activties-header text-dark">
+                                                        Activities
                                                         </div>
-                                                        <div class="single-eo-or-benchmark"><strong>EO123</strong>
-                                                            - The quick brown fox jumps over the lazy dog</div>
+                                                        @{buildActivitiesOutput(SubjectsToPlanAreaUtil.convertSubjectNameToPlanAreaName(subject.subjectDetail.subjectName.toString), subject, dayOfTheWeek)}
                                                     </div>
 
-                                                    <div class="weekly-plan-subject-benchmarks">
-                                                        <div class="weekly-plan-subject-benchmarks-header  text-dark">
-                                                        Benchmarks
-                                                        </div>
-                                                        <div class="single-eo-or-benchmark">Some benchmark one</div>
-                                                        <div class="single-eo-or-benchmark">Some benchmark two</div>
-                                                    </div>
+                                                    @*<div class="weekly-plan-subject-benchmarks">*@
+                                                        @*<div class="weekly-plan-subject-benchmarks-header  text-dark">*@
+                                                        @*Benchmarks*@
+                                                        @*</div>*@
+                                                        @*<div class="single-eo-or-benchmark">Some benchmark one</div>*@
+                                                        @*<div class="single-eo-or-benchmark">Some benchmark two</div>*@
+                                                    @*</div>*@
                                                 </div>
                                             </div>
                                         </div>
