--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -43,7 +43,7 @@
     <div class="weekly-planning-individual-activity-wrapper">
         <ul>
         @for(line <- elem.attributeValue.split("\n")){
-            <li class="text-primary">@line</li>
+            <li class="text-dark">@line</li>
         }
         </ul>
         <div class="weekly-planning-groups-for-activity">
