--- a/server/public/stylesheets/weeklyplans.css
+++ b/server/public/stylesheets/weeklyplans.css
@@ -102,8 +102,7 @@ ul {
     padding-top: 0.15rem;
     padding-left: 0.1rem;
     padding-bottom: 0.15rem;
-    /*border: 1px solid #93b2cd;*/
-    border: 1px solid #6C6F73;
+    border: 1px solid #bbbbbb;
     border-radius: 5px;
 
 }
