--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -287,7 +287,7 @@
 
                                     }
                                     <li class="nav-item">
-                                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-danger btn-block" role="button"
+                                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-danger btn-block" role="button" target="_blank"
                                         href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(maybeClassDetails.get.id.id)">
                                             Create Termly Plan PDF</a>
                                     </li>
