--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -218,6 +218,34 @@
     </section>
 
 
+    <div class="modal" id="view-single-lesson-plan-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        <span data-subject-name="" id="view-single-lesson-plan-subject-name" class="text-success"></span>
+                        Plan
+                    </h5>
+
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+
+                    <div id="view-single-lesson-plan-modal-body"></div>
+
+                </div>
+                <div class="modal-footer">
+                    <button id="view-single-lesson-plan-save-subject-plan" type="button" class="btn btn-primary">
+                        Save Plan</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script>
             localStorage.setItem("classId", "@classDetails.id.id");
     </script>
