--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -192,7 +192,7 @@
 
     <div class="row d-flex justify-content-around">
         <button id="back-to-weekly-view-button" type="button" class="btn btn-primary btn-lg">
-            Weekly View
+            Switch to Weekly View
         </button>
     </div>
 
