--- a/server/public/stylesheets/weeklyplans.css
+++ b/server/public/stylesheets/weeklyplans.css
@@ -173,6 +173,18 @@ ul {
     }
 }
 
+
+#view-single-lesson-plan-day-of-week {
+    margin-right: 1rem;
+}
+
+#view-single-lesson-plan-modal .modal-dialog {
+    max-width: 100%;
+    max-height: 100%;
+    width: 90%;
+    height: 90%;
+}
+
 @media (max-width: 990px) {
     .weekly-plan-dayoftheweek {
         word-wrap: break-word;
