--- a/server/app/views/planning/weekly/pdfViewClassWeeklyPlan.scala.html
+++ b/server/app/views/planning/weekly/pdfViewClassWeeklyPlan.scala.html
@@ -195,10 +195,7 @@
     }
 
 
-@*//    @for(thing <- fullWeeklyPlanOfLessons.) {
-
-} *@
-
+    <p>@fullWeeklyPlanOfLessons.dayToLessons().keys.toString()</p>
 
 
 
