--- a/server/app/views/signedupcongrats.scala.html
+++ b/server/app/views/signedupcongrats.scala.html
@@ -107,7 +107,7 @@
 
 
         <script>
-        window.setTimeout(goToApp, 1000);
+        window.setTimeout(goToEmailGDPR, 1000);
         </script>
         @* ========================================================================================================*@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
