--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -70,9 +70,9 @@
         </nav>
 
         <section id="loginSection">
-            <div class="alert alert-info text-center show this-is-a-test-site-alert" role="alert">
-                <p class="lead"><strong>Note:</strong> This is a beta-test environment and shouldn't be used for actual planning</p>
-            </div>
+            @*<div class="alert alert-info text-center show this-is-a-test-site-alert" role="alert">*@
+                @*<p class="lead"><strong>Note:</strong> This is a beta-test environment and shouldn't be used for actual planning</p>*@
+            @*</div>*@
 
             <div class="container">
 
