--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -193,8 +193,8 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Science") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                        <div class="custom-control custom-checkbox">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
                                             <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
@@ -218,8 +218,8 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Social Studies") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                        <div class="custom-control custom-checkbox">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
                                             <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
@@ -243,8 +243,8 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Technologies") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                        <div class="custom-control custom-checkbox">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
                                             <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
